src/global.scss
/*
 * App Global CSS
 * ----------------------------------------------------------------------------
 * Put style rules here that you want to apply globally. These styles are for
 * the entire app and not just one component. Additionally, this file can be
 * used as an entry point to import other CSS/Sass files to be included in the
 * output CSS.
 * For more information on global stylesheets, visit the documentation:
 * https://ionicframework.com/docs/layout/global-stylesheets
 */

/* Core CSS required for Ionic components to work properly */
@import '~@ionic/angular/css/core.css';

/* Basic CSS for apps built with Ionic */
@import '~@ionic/angular/css/normalize.css';
@import '~@ionic/angular/css/structure.css';
@import '~@ionic/angular/css/typography.css';
@import '~@ionic/angular/css/display.css';

/* Optional CSS utils that can be commented out */
@import '~@ionic/angular/css/padding.css';
@import '~@ionic/angular/css/float-elements.css';
@import '~@ionic/angular/css/text-alignment.css';
@import '~@ionic/angular/css/text-transformation.css';
@import '~@ionic/angular/css/flex-utils.css';
html,
body {
  font-family: 'Source Sans Pro', sans-serif;
  margin: 0;
  font-size: 17px;
  color: #000;
  --black: #000000;
  --mine: #2f2f2f;
  --dove: #727272;
  --dusty: #999999;
  --silver: #c2c2c2;
  --mike: #dddddd;
  --alto: #e0e0e0;
  --mercury: #e9e9e9;
  --concrete: #f2f2f2;
  --alabaster: #fbfbfb;
  --white: #ffffff;
  --solitude: #e6f3ff;
  --azure: #007fed;
  --azure_hover: #1993fd;
  --cerulean: #00bfff;
  --green: #75b943;
  --emerald: #53d76b;
  --danger: #ff3b30;
  --radical: #fc3159;
  --pumpkin: #fd9426;
  --indigo: #595ad5;
  --elm: #197a84;
  --polar: #f3f9fd;
  --mystic: #b2c6d8;
  --bali: #8aa3b8;
  --science: #006bc8;
  --picton-2: #4bbcec;
  --cod-gray: #141414;
  --aurora: #bbdda2;
  --vida: #4da322;
  --porcelain: #f0f3f4;
  --botticelli: #ccd9e3;
  --lightblue: #e3f1fc;
}
ion-content {
  --background: #fbfbfb;
}

ion-button {
  text-transform: none;
  font-weight: 600;
  font-family: 'Source Sans Pro', sans-serif;
  height: 50px !important;
  font-stretch: normal;
  font-style: normal;
  letter-spacing: normal;
}
.ion-button-label {
  height: 34px;
  line-height: 34px;
  font-size: 17px;
  font-weight: 600;
  font-stretch: normal;
  font-style: normal;
  letter-spacing: normal;
}
.popover-warning {
  --height: auto;
  .modal-wrapper {
    width: 510px;
    background: white;
    border-radius: 16px;
    box-shadow: 0 11px 19px 0 rgba(0, 0, 0, 0.08);
    .ion-page {
      position: relative;
      contain: content;
      max-height: 90vh;
      .modal-content {
        overflow: auto;
      }
    }
  }
}
.popover-coinselect .popover-content {
  list-style: none;
  padding: 0;
  width: 150px;
  overflow-y: auto;
  overflow-x: hidden;
  box-shadow: 0px 0px 18px 0px #444444;
  border-radius: 8px;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}

.popover-coinselect .modal-wrapper {
  height: 366px;
}
.popover-coinselect .modal-wrapper {
  width: 344px;
  border-radius: 16px;
  box-shadow: 0 11px 19px 0 rgba(0, 0, 0, 0.08);
}

.operation-btn {
  font-size: 20px;
  height: 50px;
  --border-radius: 25px;
  --box-shadow: none;
}
.swap-card {
  width: 510px;
  margin: 0px auto 25px auto;
  background: white;
  border-radius: 4px;
  box-shadow: 0 11px 19px 0 rgba(0, 0, 0, 0.08);
}
.card-content {
  margin: 0 30px;
  margin-top: 25px;
  letter-spacing: 1px;
  color: white;
}
.divider {
  height: 10px;
  background: #fbfbfb;
  border-bottom: 1px solid #e9e9e9;
}
.card-content p {
  font-size: 15px;
  color: var(--dove);
  font-weight: 600;
  font-stretch: normal;
  font-style: normal;
  line-height: 1.67;
  letter-spacing: normal;
}
.oracle-cost {
  text-align: right;
  font-size: 14px !important;
  line-height: 34px !important;
  margin: 5px 0px;
}

.liquid-input {
  margin: 0 auto;
}

.explain-div {
  background: rgba(255, 255, 255, 0.03);
  border-radius: 7px;
  margin: 0 auto;
  width: 100%;
}

.conversionPrice {
  min-height: 50px;
  font-size: 17px;
  color: var(--dove);
  border-bottom: 1px solid #e9e9e9;
  padding: 0px 16px;
}
.margin-top {
  margin-top: 22px;
}
.conversionPrice .label {
  display: inline-flex;
  align-items: center;
  justify-content: flex-start;
  cursor: pointer;
  color: var(--dove);
  font-size: 14px;
  font-weight: normal;
  font-stretch: normal;
  font-style: normal;
  line-height: 2.57;
  letter-spacing: normal;
}

.button-div {
  display: flex;
  justify-content: space-between;
  margin: 30px auto;
}

.swap-btn,
.approve-btn {
  width: 45%;
  display: block;
}
.swap-btn {
  --background: #bbdda2;
  color: white;
}

.full-btn {
  width: 100%;
}

.alert-icon {
  margin-left: 10px;
  width: 18px;
  cursor: pointer;
}
@keyframes loadingmove {
  from {
    transform: rotate(0);
  }

  to {
    transform: rotate(359deg);
  }
}

/* Safari and Chrome */
@-webkit-keyframes loadingmove {
  from {
    transform: rotate(0);
  }

  to {
    transform: rotate(359deg);
  }
}
.loading,
.loading-connect {
  width: 25px;
  height: 25px;
  background: transparent;
  z-index: 9999;
  border-radius: 50%;
  animation: loadingmove 1.2s linear infinite;
  -webkit-animation: loadingmove 1.2s linear infinite;
}
.loading {
  margin-top: 3px;
  border: 3px solid white;
  border-bottom: 3px solid transparent;
}
.loading-connect {
  position: absolute;
  top: 10px;
  right: 75px;
  border: 3px solid var(--ion-color-primary);
  border-bottom: 3px solid transparent;
}

@media only screen and (max-width: 820px) {
  .loading-connect {
    top: 17px;
    right: 125px;
  }
  .card-content {
    margin: 0 8px;
  }
  .mobile-header {
    display: block !important;
  }
  .web-header {
    display: none !important;
  }
}

@media only screen and (max-width: 470px) {
  .swap-card {
    width: 100% !important;
    margin-left: 0px;
    margin-right: 0px;
  }
  .card-title {
    width: 90% !important;
  }

  .loading-connect {
    position: absolute;
    top: 17px;
    right: 120px;
  }
  .popover-warning .modal-wrapper {
    width: 94%;
    min-height: 486px;
  }
  .close-icon {
    top: 15px;
    left: 5px;
  }
  .txconfirm-class .popover-content,
  .txstatus-class .popover-content,
  .account-class .popover-content,
  .connect-class .popover-content {
    left: 0px !important;
    top: unset !important;
    bottom: 0px;
    width: 100% !important;
    border-radius: unset !important;
    border-top-left-radius: 16px !important;
    border-top-right-radius: 16px !important;
  }

  .main-content {
    padding-left: 8px;
    padding-right: 8px;
  }
  .tooltips-class .popover-content {
    width: 270px !important;
  }
}

.popover-ios .popover-arrow::after {
  display: none;
}

.error_warn {
  font-size: 16px;
  width: 100%;
  text-align: center;
  margin-top: 15px;
}

.close-icon {
  font-size: 30px;
  position: absolute;
  color: var(--dove);
  top: 20px;
  cursor: pointer;
  z-index: 10;
}

ion-toggle {
  --background-checked: var(--ion-color-primary);
  --background: rgba(34, 31, 31, 0.26);
  z-index: 0;
}
.error {
  font-size: 13px !important;
  color: #ff3b30;
}

.select-content {
  width: 100%;
  background: white;
}

.first-row {
  border-top: 1px solid #e9e9e9;
}

.border-top {
  border-top: 1px solid #e9e9e9;
}
.ETH_icon {
  width: 40px;
}

.conversionPrice .number {
  color: #000;
  font-weight: 600;
  font-stretch: normal;
  font-style: normal;
  letter-spacing: normal;
}

.close-img {
  position: absolute;
  top: 30px;
  /*left: 20px;8*/
  cursor: pointer;
  z-index: 10;
  width: 32px;
}
.button-outline {
  margin: 0px auto 16px auto;
  --border-color: var(--silver);
}
.button-outline .ion-button-label {
  color: #000;
}

.divider-swap {
  height: 12px;
  background: var(--alabaster);
}

.claimETH {
  height: 113px;
  border-radius: 4px;
  border: solid 1px var(--concrete);
  background-color: var(--white);
}
.claimETH .number {
  font-size: 36px;
  font-weight: normal;
  font-stretch: normal;
  font-style: normal;
  letter-spacing: normal;
  color: var(--black);
}
.claimETH .conversionPrice {
  border: 0;
}

.tooltips-class .popover-content {
  width: 320px;
  border-radius: 16px;
  box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.1);
  border: solid 1px var(--mercury);
  background-color: var(--white);
}

.tooltips-class .popover-content .content p {
  margin-block-start: 0em !important;
  margin-block-end: 0em !important;
}

.txconfirm-class .popover-content,
.txstatus-class .popover-content {
  width: 360px;
  min-height: 260px;
  border-radius: 16px;
  box-shadow: 0 11px 19px 0 rgba(0, 0, 0, 0.08);
  background-color: var(--white);
}
.connect-class .popover-content {
  width: 360px;
  min-height: 323px;
  border-radius: 16px;
  box-shadow: 0 11px 19px 0 rgba(0, 0, 0, 0.08);
  background-color: var(--white);
}

.txconfirm-class .popover-content {
  height: 257px;
}

.tippannel-content .detail-content .desc {
  p,
  li {
    line-height: 22px;
    color: var(--dove);
    font-family: 'Source Sans Pro', sans-serif;
    font-size: 17px;
    font-weight: normal;
    font-stretch: normal;
    font-style: normal;
    letter-spacing: normal;
    margin: 7px 0px;
    text-align: justify;
  }

  ol {
    margin-block-start: 0;
    margin-block-end: 0;
    padding-inline-start: 10px;
  }
  a {
    color: var(--black);
    cursor: pointer;
  }
}

.tooltips div p {
  font-weight: normal !important;
  margin-block-start: 0;
  margin-block-end: 0;
}

.menu-class .popover-content {
  width: 250px;
  border-bottom-left-radius: 16px;
  border-bottom-right-radius: 16px;
  box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.1);
  border: solid 1px var(--mercury);
  background-color: var(--white);
  top: 80px !important;
}

.menu-class .popover-content .content p {
  margin-block-start: 0em !important;
  margin-block-end: 0em !important;
}
.account-class .popover-content {
  width: 360px;
  border-radius: 16px;
  box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.1);
  border: solid 1px var(--mercury);
  background-color: var(--white);
}

.menu-divider {
  border-bottom: 1px solid var(--mercury);
}

.mobile-header {
  display: none;
}
.web-header {
  display: block;
}

.skeleton-input {
  width: 150px;
}

.skeleton-earnedeth {
  width: 60%;
  height: 40px;
}

:host ::ng-deep app-coin-input.coin-input {
  .input-group > .input {
    border-left: none;
  }
}
.count {
  display: block;
  clear: both;
  margin: 0 auto;
  margin-top: 15px;
}

